<resources>
    <string name="app_name">博辉艺术</string>

    <string name="ok">确定</string>
    <string name="cancel">取消</string>
    <string name="prompt">提示</string>
    <string name="network">设置网络</string>

    <!-- 启动页版权说明 -->
    <string name="all_right">Copyright © 2017 BoHui</string>
    <!-- 欢迎页 -->
    <string name="welcome_start">开启体验</string>
    <!-- 主页 -->
    <string name="main_tab_home">首页</string>
    <string name="main_tab_classify">分类</string>
    <string name="main_tab_found">发现</string>
    <string name="main_tab_mine">我的</string>

    <string name="photo">照相机</string>
    <string name="album">相册</string>
    <!-- temp -->
    <string name="temp_jianjie">山水画，简称“山水”。中国画的一种。描写山川自然景色为主体的绘画。在魏晋、南北朝已逐渐发展，
        但仍附属于人物画，作为背景的居多；隋唐始独立，如展子虔的设色山水，李思训的金碧山水，王维的水墨山水，王洽的泼墨山水等；
        五代、北宋山水画大兴，作者纷起，如荆浩、关仝、李成、董源、巨然、范宽、许道宁、燕文贵、宋迪、王诜、米芾、米友仁的水墨山水
        ，王希孟、赵伯驹、赵伯骕的青绿山水，南北竞辉，达到高峰。从此成为中国画中的一大画科；元代山水画趋向写意，以虚带实，侧重笔
        墨神韵，开创新风；明清及近代，续有发展，亦出新貌。表现上讲究经营位置和表达意境。传统分法有水墨、青绿、金碧、没骨、浅绛、
        淡彩等形式。\n 山水画，简称“山水”。中国画的一种。描写山川自然景色为主体的绘画。在魏晋、南北朝已逐渐发展，
        但仍附属于人物画，作为背景的居多；隋唐始独立，如展子虔的设色山水，李思训的金碧山水，王维的水墨山水，王洽的泼墨山水等；
        五代、北宋山水画大兴，作者纷起，如荆浩、关仝、李成、董源、巨然、范宽、许道宁、燕文贵、宋迪、王诜、米芾、米友仁的水墨山水
        ，王希孟、赵伯驹、赵伯骕的青绿山水，南北竞辉，达到高峰。从此成为中国画中的一大画科；元代山水画趋向写意，以虚带实，侧重笔
        墨神韵，开创新风；明清及近代，续有发展，亦出新貌。表现上讲究经营位置和表达意境。传统分法有水墨、青绿、金碧、没骨、浅绛、
        淡彩等形式。</string>
    <!--停服-->
    <string name="tv_scrib">更多精彩，更好的体验\n正在为你准备</string>
    <string name="tv_scrib1">我们将尽快为你呈现\n请稍后回来</string>
</resources>
