<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginLeft="@dimen/dialog_out_margin_lr"
    android:layout_marginRight="@dimen/dialog_out_margin_lr"
    android:orientation="vertical"
    android:background="@drawable/shape_dialog_bg"
    android:gravity="center">
    <TextView
        android:id="@+id/tv_dialog_title"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dialog_title_margin_tb"
        android:gravity="center"
        android:layout_marginBottom="@dimen/dialog_title_margin_tb"
        android:text="@string/prompt"
        android:textColor="@color/dialog_title_content_color"
        android:textSize="@dimen/dialog_title_font_size"
        android:textStyle="bold" />
    <TextView
        android:id="@+id/tv_dialog_message"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/dialog_message_margin"
        android:layout_marginLeft="@dimen/dialog_message_margin"
        android:layout_marginRight="@dimen/dialog_message_margin"
        android:gravity="center"
        android:textSize="@dimen/dialog_message_font_size"
        android:text=""
        android:textColor="@color/dialog_title_content_color"
        />
    <View
        android:layout_width="fill_parent"
        android:layout_height="@dimen/dp_0.5"
        android:layout_below="@+id/tv_dialog_message"
        android:background="@color/dialog_divider_color" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/btn_dialog_left"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:paddingBottom="@dimen/dialog_btn_padding"
            android:paddingTop="@dimen/dialog_btn_padding"
            android:text="@string/cancel"
            android:textSize="@dimen/dialog_btn_font_size"
            android:textColor="@color/dialog_btn_color"/>
        <View
            android:id="@+id/alert_dialog_line"
            android:layout_width="@dimen/dialog_btn_divider_width"
            android:layout_height="fill_parent"
            android:background="@color/dialog_divider_color" />
        <TextView
            android:id="@+id/btn_dialog_right"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:paddingBottom="@dimen/dialog_btn_padding"
            android:paddingTop="@dimen/dialog_btn_padding"
            android:textSize="@dimen/dialog_btn_font_size"
            android:text="@string/ok"
            android:textColor="@color/dialog_btn_color" />
    </LinearLayout>
</LinearLayout>